# VGED-ENGINE

./: .clang-format  .gitignore  .gitmodules  .test.txt.swp  CMakeLists.txt  LICENSE  README.md  build.sh  imgui.ini  makefile  test.txt
.github/workflows/: format.yml  linux-workflow.yml
application/: main.cpp
application/example_game/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  editor_app.cpp  editor_app.hpp  first_app.cpp  first_app.hpp  main.cpp
engine/: CMakeLists.txt  dependencies.h  vged.hpp
engine/core/: debug.h  debug.hpp  discord.cpp  discord.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  lve_window.cpp  lve_window.hpp  result.cpp  result.hpp  script_header.hpp  script_manager.cpp  script_manager.hpp  types.hpp  window.cpp  window.h  window.hpp
engine/data/: entity.cpp  entity.hpp
engine/graphics/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  gpu_resource_manager.cpp  gpu_resource_manager.hpp  image.cpp  image.hpp  imgui_layer.cpp  imgui_layer.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_device.hpp  lve_imgui.cpp  lve_imgui.hpp  lve_swap_chain.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  stb_image.h  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  tiny_obj_loader.h  utils.hpp  vk_types.hpp
engine/log/: log.cpp  log.hpp
engine/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
engine/utils/: live_file.cpp  live_file.hpp  result.cpp  result.hpp  uid.cpp  uid.hpp
libs/: CMakeLists.txt
shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/core/: window.cpp  window.h
